# daghe-youtube-ia-archiver

./: .gitignore
current/: PROMPT.md  README.md  daghe-module.yaml.example  pyproject.toml
current/config/: description_prefix.txt.example  job.yaml.example
current/src/youtube_ia_archiver/: archive.py  cli.py  config.py  git_ops.py  main.py  notifier.py  processor.py  utils.py
